Fixed function docs not showning due to API macro and added some more docs

--- a/src/SConscript
+++ b/src/SConscript
@@ -41,7 +41,7 @@ else:
 #Generate the API documentation using cldoc
 docs = env.Command( Dir('docs')
 									 ,['lm048lib.h', 'lm951lib.h']
-									 ,'cldoc generate -- $SOURCE --output $TARGET')
+									 ,'cldoc generate -- --report --language c $SOURCE --output $TARGET')
 env.Clean(docs, Glob('docs/*'))
 
 #Copy the documentation into the main docs folder
